--- a/study-plan.Rmd
+++ b/study-plan.Rmd
@@ -149,7 +149,7 @@ Data characteristics can be seen in table \@ref(tab:table1)
 
 ## Training
 
-Using the training sample the optimal cutoffs for the logistic regression was found maximizing the youden index. The optimal cutoffs where __99 (95%CI), 30(95%CI) and 14(95%CI)__ for SPB, RR and GCS respectively. and the corresponding confidence intervals can be seen in table 2
+Using the training sample the optimal cutoffs for the logistic regression was found maximizing the youden index. The optimal cutoffs where `r boot.cis$cut.rr[["pe"]]`, `boot.cis$cut.rr[["pe"]]` and 14 for SPB, RR and GCS respectively. and the corresponding confidence intervals can be seen in table 2
 
 
 
@@ -159,45 +159,68 @@ Using the validation sample, new coefficients and odds ratios(OR) was calculated
 
 Furthermore the new coefficent and the original coefficent were used to create odds ratios for the original and uppdated qSOFA scores using the distribution in the validation sample and yielded the results given in table 3 and 4 
 
-|           | Original OR | Uppdated OR(95%CI)         |
-|-----------|-------------|----------------------------|
-| Intercept | yy          | `r ors[["(Intercept)"]]`   |
-| SBP       | yy          | `r ors[["new.sbp_score"]]` |
-| RR        | yy          | `r ors[["new.rr_score"]]`  |
-| GCS       | yy          | `r ors[["new.gcs_score"]]` |
+|           | Original OR     | Uppdated OR(95%CI)         | Optimal cutoffs (95%CI) |
+|-----------|-----------------|----------------------------|-------------------------|
+| Intercept | yy              | `r ors[["(Intercept)"]]`   |  -                      |
+| SBP       | 2.61(2.40-2.85) | `r ors[["new.sbp_score"]]` |`r CIs$cut.sbp`          |
+| RR        | 3.18(2.89-3.50) | `r ors[["new.rr_score"]]`  |`r CIs$cut.rr`           |
+| GCS       | 4.31(9.96-4.69) | `r ors[["new.gcs_score"]]` | 14                      |
 Table: Table 2 Original and uppdated OR for the logistic regression model 
 
-| Uppdated score  | Estimated probability of ICU admission(95%CI) | Odds ratio(95% CI) |
-|-----------------|-----------------------------------------------|--------------------|
-| 0               | Prob0.new (xx-xx)                             | 1                  |
-| 1               | Prob1.new (xx-xx)                             | OR1(y-y)           |
-| 2               | Prob2.new (xx-xx)                             | OR2(y-y)           |
-| 3               | Prob3.new (xx-xx)                             | OR3(y-y)           |
+<!-- Okey, im a bit lost about this with the optimal cutoffs... as is now its calculated every time you run the study and the new one is used and i thought that you then need to present the spread but isnt it better to first do this and then do the following parts with the same cutoff otherwise the coefficents and ORs could be for different cutoffs and that seems nonsencical? -->
+
+<!-- Also, should we include the youden index? or some kind of AUC plot for the cutoffs somehow? Or is it enough to say that we maximized it and show the results? -->
+
+
+
+
+| Updated score   | Estimated probability of ICU admission(95%CI) | Odds ratio(95% CI)          |
+|-----------------|-----------------------------------------------|-----------------------------|
+| 0               | `r CIs$est.prob.sum.new.none `                | 1                           |
+| 1               | `r CIs$est.prob.sum.new.one `                 |`r CIs$est.OR.sum.new.one `  |
+| 2               | `r CIs$est.prob.sum.new.two `                 |`r CIs$est.OR.sum.new.two `  |
+| 3               | `r CIs$est.prob.sum.new.three `               |`r CIs$est.OR.sum.new.three `|
 
 Table: Table 3 Estimated probabilities of ICU admission given a uppdated qSOFA score of 0-3 and corresponding OR.
-
-| Original score  | Estimated probability of ICU admission(95%CI) | Odds ratio(95% CI) |
-|-----------------|-----------------------------------------------|--------------------|
-| 0               | Prob0.org (xx-xx)                             | 1                  |
-| 1               | Prob1.org (xx-xx)                             | OR1(y-y)           |
-| 2               | Prob2.org (xx-xx)                             | OR2(y-y)           |
-| 3               | Prob3.org (xx-xx)                             | OR3(y-y)           |
-
-Table: Table 4 Estimated probabilities of ICU admission given a original qSOFA score of 0-3 and corresponding OR.
 
 
 ## Test
 
-Using the test sample to calculate real probabilities of ICU admission and comparing to the estimated ones for the original and updated model. Figure 2? shows a comparison between the estimated and observed probabilities and table 5 compares the ICI original and updated model.
+Using the test sample to calculate real probabilities of ICU admission and comparing to the estimated ones for the original and updated model. Figure 2? shows a comparison between the estimated and observed probabilities and table 4 compares the ICI original and updated model.
 
-Figure: __FIGURE with 4 figures showing the est prob vs the real prob for new vs org and sum vs individual. possibly with CIs inluded in the graph__
+Figure: __FIGURE with 4 figures showing the ICI plots for new vs org and sum vs individual. possibly with CIs inluded in the graph__
+
+Figure: __FIGURE with 2 figures showing the AUC plots for new vs org__
+
+<!-- These are the figures i think would give clarity about the data and the new model, is there a good way to do it? I added a part in the end of the main code-document generating one of the plots in question but im not sure if thats the best way or if we could add CIs in some way in the plot.  -->
 
 
-|              | ICI(95% CI) | Diff(95% CI) |
-|--------------|-------------|--------------|
-| ORG separate | XX (xx-xx)  | -            |
-| NEW seperate | xx (xx-xx)  | yy (zz-zz)   |
-| ORG sum      | xx (yy-yy)  | -            |
-| New sum      | xx (zz-zz)  | yy (zz-zz)   |
-Table: caption
+|              | ICI(95% CI)        | Diff(95% CI)                | AUC (95%CI)    |
+|--------------|--------------------|-----------------------------|----------------|
+| ORG separate | `r CIs$ICI.org`    | -                           |`r CIs$auc.org` |
+| NEW seperate | `r CIs$ICI.new`    | `r CIs$diff.ici.qsofa`      |`r CIs$auc.new` |
+| ORG sum      | `r CIs$ICI.sum.org`| -                           | -              |
+| New sum      | `r CIs$ICI.sum.new`| `r CIs$diff.ici.qsofa.sum`  | -              |
+Table: Table 4. Comparission of performence,ICI and AUC, between the new and original model as well as the ICI for the combined score for the original and updated.
 
+Discussion
+========
+
+
+Svaghet:
+ * Mycket missing data och oklart om det är MCAR eller MAR eller MNAR och så oklart hur mycket som är felrapporterat.
+ * ett score av 0 ger fortfarande 30 % risk för intensivvård vilket gör att det är ifrågasättart för direkt användning i klinisk vardag.
+ * Bara ett dataset även fast vi använde bootstrap så är det oklart hur generaliserbart det är
+ * AUCn är rätt låg
+ * TITCO är bara från urbana sjukhus och återspeglar inte landsbyggssjukvård som är övervägande i bl.a. indien.
+ * In TITCO most patients are transfered till medverkande sjukhusen vilket kan motsvara en viss försening av adekvat vård som kan påverka utfallet. alternativt att dom sjukaste dör innan ankomst eller på annan vårdinrättning. 
+ 
+ Styrka:
+ * Väldigt låg ICI och nya modellen stämmer klart bättre än orginalmodellen.
+ * Bra att visa att orginal qSOFA inte fungerar rakt av i detta sammanhang oavsett anledning.
+ * Trots missing data ett stort data-set
+ * Uppenbart kunskapslucka som detta hjälper till att fylla även om inte perfekt.
+ 
+ 
+ 
+ 
