--- a/study-plan.Rmd
+++ b/study-plan.Rmd
@@ -28,7 +28,15 @@ Because of the inherent urgency and complexity in trauma care it is vital to hav
 
 It should also be noted that the majority of the research done on the topic of trauma and trauma care has been performed in high income countries. It is thus not clear if the results are also applicable in low resource settings, which arguably stand to benefit the most of a scoring system to be able to prioritize the limited resources at hand. Furthermore, most studies report the predictive power of different scoring systems on mortality and it has not yet been sufficiently studied whether an initial qSOFA score can be used to predict admissions to an intensive care unit and thus aid in the direct clinical treatment of trauma patients.
 
-## Aim
+<!-- just for the KI paper ---> 
+##Healthcare in India 
+
+The Indian healthcare is of now severely underfunded, the national healthcare expenditure is about 3.5% of national GDP, or about 70 USD per person in 2017, compared to a national healthcare expenditure of 5900 USD in Sweden for the same year. Out of these 70 USD per person 27 % is government expenditure and 72% is private expenditure, mostly out of pocket expenditures. (https://data.worldbank.org/) This makes the unregulated private healthcare sector almost 3 times as large as the public sector providing 80% of outpatient care and 60% of inpatient care in India. India also lacks healthcare personal and in many cases subspecialized medical training, especially regarding trauma care. (Nobhojit Roy)(Martin Gerdin)
+
+Besides the deficient monetary aspects of Indias healthcare system it can also be said that there is a lack of sufficiently enforced safety policies and regulations, for example road traffic and workplace safety. Although it should be noted that in the new national health policy from 2017 one of the primary focuses are preventing rail and road traffic accidents. The national health policy also aims at expanding the number of hospital beds dedicated to trauma care across the country reducing the time between injury and care as guided by the golden hour concept discussed above. (Nobhojit Roy)(Martin Gerdin) 
+
+
+## Aim  
 The aim of this project is to assess the validity of qSOFA in predicting ICU admission in trauma patients admitted to hospitals in a low resource setting using data from the TITCO cohort [TITCO].
 
 
@@ -128,16 +136,9 @@ exposure and an outcome then use
 
 Results
 ========
-The TITCO cohort included `r results$n.cohort` patients, from which `r results$n.younger.than.18` where excluded for being under the age of 18 leaving `r results$n.adults` patients. Next `r results$n.incl2 ` patients died between arrival and admission and where thus excluded from the sample leaving `r results$n.included` patients. Furthermore `r results$n.NA_TOT` patients where excluded due to missing and non recorded data in one of the following categories: 
-admission to the ICU: `r results$n.NA_ICU`
-Systolic BP: `r results$n.NA_SBP`
-RR: `r results$n.NA_RR`
-GCS: `r results$n.NA_GCS`
-Leaving `r results$n.complete` datapoints to be used in the analysis. 
+The TITCO cohort included `r results$n.cohort` patients, from which `r results$n.younger.than.18` where excluded for being under the age of 18 leaving `r results$n.adults` patients. Next `r results$n.incl2 ` patients died between arrival and admission and where thus excluded from the sample leaving `r results$n.included` patients. Furthermore `r results$n.NA_TOT` patients where excluded due to missing and non recorded data in either admission to the ICU (`r results$n.NA_ICU`), Systolic blood pressure  (`r results$n.NA_SBP`), Respiratory rate (`r results$n.NA_RR`), GCS: (`r results$n.NA_GCS`). Excluding data points with missing data leaves `r results$n.complete` data points to be included in the final study sample. 
 
-Sample characteristics are shown in table \@ref(tab:table1). <!-- It's common to also summarize the data in the text, and state the age and gender distribution for example, the most common mechanism of injury, how many were transferred from other health facilities etc -->
-
-<!-- Try to write this last part of the paragraph as one coherent sentence instead of this list -->
+The median age of the final study sample was `r tabOne$ContTable$Overall["Age","mean"]` with predominantly male participants, `r tabOne$CatTable$Overall$Sex["2","percent"]`%. The most common type of injury was road traffic injuries with ```r tabOne$CatTable$Overall$`Mode of injury`["6","percent"]```% followed by fall injuries and assaults accouting for ```r tabOne$CatTable$Overall$`Mode of injury`["3","percent"] ```% and  ```r tabOne$CatTable$Overall$`Mode of injury`["1","percent"] ```% respectively. Furthermore `r  tabOne$CatTable$Overall$Transported["2","percent"]`% of patients were transported to a participating hospital from another health care facility. Overall in the study population ```r tabOne$CatTable$Overall$`Admitted to the ICU`["2","percent"] ```% of patients had to be treated for some time in the ICU. The data is presented in \@ref(tab:table1) with corresponding standard deviations. 
 
 ```{r figure1, fig.align = 'center', out.width = "100%", fig.cap = "Flowchart of exclussion from the study", echo = FALSE}
 knitr::include_graphics("figure1.svg")
@@ -147,18 +148,9 @@ knitr::include_graphics("figure1.svg")
 ```
 
 
+Using the training sample the optimal cutoffs of the logistic regressions for each parameter was found maximizing the youden index. The optimal cutoffs where calculated to be `r boot.cis$cut.sbp[["pe"]]`, `r boot.cis$cut.rr[["pe"]]` and `r boot.cis$cut.gcs[["pe"]]` for SPB, RR and GCS respectively and the corresponding confidence intervals can be seen in table 2.
 
-## Training
-
- <!-- Try to come up with subheadings that better describe what happened during each step, if you feel that you need subheadings at all. -->
-
-Using the training sample the optimal cutoffs for the logistic regression was found maximizing the youden index. The optimal cutoffs where `r boot.cis$cut.rr[["pe"]]`, `boot.cis$cut.rr[["pe"]]` and 14 for SPB, RR and GCS respectively. and the corresponding confidence intervals can be seen in table 2 <!-- This last part is not a complete sentence. Also make sure that you extract data on the cutoffs on all three variables, not only RR -->
-
-
-
-## Validation
-
-Using the validation sample, new coefficients and odds ratios (OR) were estimated for the updated model using the cutoffs given in the training sample. The odds ratios can be seen in table 2. 
+Then using the validation sample, new coefficients and odds ratios (OR) were estimated for the updated model using the cutoffs given in the training sample from each bootstrap. The odds ratios can be seen in table 2. 
 
 Furthermore the new coefficents and the original coefficents were used to create odds ratios for the original and uppdated qSOFA scores using the distribution in the validation sample and yielded the results given in table 3 and 4 
 
@@ -167,17 +159,8 @@ Furthermore the new coefficents and the original coefficents were used to create
 | Intercept | yy              | `r ors[["(Intercept)"]]`   |  -                      |
 | SBP       | 2.61(2.40-2.85) | `r ors[["new.sbp_score"]]` |`r CIs$cut.sbp`          |
 | RR        | 3.18(2.89-3.50) | `r ors[["new.rr_score"]]`  |`r CIs$cut.rr`           |
-| GCS       | 4.31(9.96-4.69) | `r ors[["new.gcs_score"]]` | 14                      |
+| GCS       | 4.31(9.96-4.69) | `r ors[["new.gcs_score"]]` |`r CIs$cut.gcs`          |
 Table: Table 2 Original and uppdated OR for the logistic regression model 
-
-<!-- Okey, im a bit lost about this with the optimal cutoffs... as is now its calculated every time you run the study and the new one is used and i thought that you then need to present the spread but isnt it better to first do this and then do the following parts with the same cutoff otherwise the coefficents and ORs could be for different cutoffs and that seems nonsencical? -->
-
-<!-- Well, I suggest that you present the cutoffs with uncertainty (i.e. 95% CI derived from the bootstrap samples), that way you indicate that they differ across bootstraps -->
-
-<!-- Also, should we include the youden index? or some kind of AUC plot for the cutoffs somehow? Or is it enough to say that we maximized it and show the results? -->
-
-
-
 
 | Updated score   | Estimated probability of ICU admission(95%CI) | Odds ratio(95% CI)          |
 |-----------------|-----------------------------------------------|-----------------------------|
@@ -189,9 +172,7 @@ Table: Table 2 Original and uppdated OR for the logistic regression model
 Table: Table 3 Estimated probabilities of ICU admission given a uppdated qSOFA score of 0-3 and corresponding OR.
 
 
-## Test
-
-Using the test sample to calculate real probabilities of ICU admission and comparing to the estimated ones for the original and updated model. Figure 2? shows a comparison between the estimated and observed probabilities and table 4 compares the ICI original and updated model.
+The test sample was used to calculate real probabilities of ICU admission and comparing to the estimated probabilities from the original and updated model. Figure 2? shows a comparison between the estimated and observed probabilities and table 4 compares the ICI original and updated model.
 
 Figure: __FIGURE with 4 figures showing the ICI plots for new vs org and sum vs individual. possibly with CIs inluded in the graph__
 
@@ -200,32 +181,40 @@ Figure: __FIGURE with 2 figures showing the AUC plots for new vs org__
 <!-- These are the figures i think would give clarity about the data and the new model, is there a good way to do it? I added a part in the end of the main code-document generating one of the plots in question but im not sure if thats the best way or if we could add CIs in some way in the plot.  -->
 
 
-|              | ICI(95% CI)         | Diff ICI (95% CI)          | AUC (95%CI)     | Diff AUC |
-|--------------|---------------------|----------------------------|-----------------|----------|
-| ORG separate | `r CIs$ICI.org`     | -                          | `r CIs$auc.org` |          |
-| NEW seperate | `r CIs$ICI.new`     | `r CIs$diff.ici.qsofa`     | `r CIs$auc.new` |          |
-| ORG sum      | `r CIs$ICI.sum.org` | -                          | -               |          |
-| New sum      | `r CIs$ICI.sum.new` | `r CIs$diff.ici.qsofa.sum` | -               |          |
+|              | ICI(95% CI)         | Diff ICI (95% CI)          | AUC (95%CI)     | Diff AUC              |
+|--------------|---------------------|----------------------------|-----------------|-----------------------|
+| ORG separate | `r CIs$ICI.org`     | -                          | `r CIs$auc.org` |                       |
+| NEW seperate | `r CIs$ICI.new`     | `r CIs$diff.ici.qsofa`     | `r CIs$auc.new` |`r CIs$diff.auc.qsofa` |
+| ORG sum      | `r CIs$ICI.sum.org` | -                          | -               |                       |
+| New sum      | `r CIs$ICI.sum.new` | `r CIs$diff.ici.qsofa.sum` | -               |                       |
 Table: Table 4. Comparission of performence,ICI and AUC, between the new and original model as well as the ICI for the combined score for the original and updated.
 
 Discussion
 ========
 
+<!-- aim and how it went, --->
+The aim of this study was to asses the validity of the qSOFA score in predicting ICU admissions in trauma patients. In the context of urban Indian hospitals the original qSOFA score with its original cutoffs and coefficients did not accurately predict the rate of ICU admissions. The model underestimated the rate for scores of 0-2 and overestimated the rate for patients with a score of 3 as can be seen in _FIGURE showing ICI plots_. When updating the model adjusting the cutoffs and coefficients the new model performs significantly better and as well as to be expected using a single database. 
 
-Svaghet:
- * Mycket missing data och oklart om det är MCAR eller MAR eller MNAR och så oklart hur mycket som är felrapporterat.
- * ett score av 0 ger fortfarande 30 % risk för intensivvård vilket gör att det är ifrågasättart för direkt användning i klinisk vardag.
- * Bara ett dataset även fast vi använde bootstrap så är det oklart hur generaliserbart det är
- * AUCn är rätt låg
- * TITCO är bara från urbana sjukhus och återspeglar inte landsbyggssjukvård som är övervägande i bl.a. indien.
- * In TITCO most patients are transfered till medverkande sjukhusen vilket kan motsvara en viss försening av adekvat vård som kan påverka utfallet. alternativt att dom sjukaste dör innan ankomst eller på annan vårdinrättning. 
- 
- Styrka:
- * Väldigt låg ICI och nya modellen stämmer klart bättre än orginalmodellen.
- * Bra att visa att orginal qSOFA inte fungerar rakt av i detta sammanhang oavsett anledning.
- * Trots missing data ett stort data-set
- * Uppenbart kunskapslucka som detta hjälper till att fylla även om inte perfekt.
- 
- 
- 
- 
+<!-- usage and implication -->
+The estimated probabilities ranges from `r boot.cis$est.prob.sum.new.none[["pe"]]` to `r boot.cis$est.prob.sum.new.three[["pe"]]`. 
+Where the highest value can be said to be a clear overestimation not accounting for a large portion of patient. A more realistic span is that off 0-2 points, or a probability of `r boot.cis$est.prob.sum.new.none[["pe"]]` to `r boot.cis$est.prob.sum.new.two[["pe"]]`. Because of this narrow span and high baseline risk the model would not be of clinical use as a stand alone metric deciding or predicting ICU admissions but rather as a tool indicating which patients are slightly more or less likely to need it.  
+
+It can also be noted that neither the Odds Ratios for SBP nor RR is a significant result correlated to a higher risk of ICU admisson and the only significant parameter in this case is that of GCS. However this can be partially explained by the fact that a new cutoff where calculated for each bootstrap resulting in different cutoffs used and therefore resulting in an increased uncertainty. The data seem to suggest a correlation between ICU admission and RR and SBP and therefore use it in a scoring model, although this study could not give a statistically significant result the those regards. It could also be that the different parameters interacted with each other either enhancing or decreasing the effect and risk of ICU admission when present at the same time wich was not taken into consideration in this model where the different parameters where presumed to be independent of each other.   
+
+<!--limitations --->
+Because of the composition of the TITCO database the results are likely to be generalizable to other urban hospitals of similar economic and resource setting. It is not clear whether the results can be used in rural settings or setting with higher or lower resource settings. It should also be noted that _percent Transported ish 60_ of the patients where for an unspecified time first treated at another hospital and then later transferred to one of the participating hospitals. Because of this the parameters used in this study only shows the first ones taken at arrival to the participating hospital and not always the first ones taken after the injury and does not take into account any interventions performed before arrival.
+
+Furthermore out of the `r results$n.adults` patients above the age of 18 only `r results$n.complete` had complete data, or `r results$n.complete/results$n.adults`%. With this amount of missing data it is unclear if the data can be said to be missing completely at random or if there are any underlying factors contributing to the missing of data that could skew the results leading to a higher uncertainty regardless of bootstraping.
+
+##Questions:
+
+From coordinator:
+
+* Why are hospitals without trauma wards included?(in the TITCO cohort)
+	
+* Some more consideration of risks would be good [in ethical consideration] -- especially the potential to stigmatize vulnerable participants [i.e. low socioeconomic status]. How will this be avoided?
+
+Mine: 
+* Baseline risk and coefficient corresponding to that. Is it really best to take it directly from the original paper as a fair comparison or should it be adjusted for our data to get a better perspective for discussion? And I only found a figure in the supplementary material and no numbers, should i estimate what can be read from the figure or is there a better way, it was however really small just a few percent?
+
+
